--- a/Bankist-App/index.html
+++ b/Bankist-App/index.html
@@ -24,13 +24,13 @@
         />
         <ul class="nav__links">
           <li class="nav__item">
-            <a class="nav__link" href="#section--1">Features</a>
+            <a class="nav__link " href="#section--1">Features</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#section--2">Operations</a>
+            <a class="nav__link " href="#section--2">Operations</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#section--3">Testimonials</a>
+            <a class="nav__link " href="#section--3">Testimonials</a>
           </li>
           <li class="nav__item">
             <a class="nav__link nav__link--btn btn--show-modal" href="#"
@@ -41,6 +41,7 @@
       </nav>
 
       <div class="header__title">
+        <!-- onclick = "alert('HTML alert')" Can use as a atrribute-->
         <h1>
           When
           <!-- Green highlight effect -->
@@ -145,7 +146,7 @@
           >
             <span>01</span>Instant Transfers
           </button>
-          <button class="btn operations__tab operations__tab--2" data-tab="2">
+          <button class="btn operations__tab operations__tab--2 " data-tab="2">
             <span>02</span>Instant Loans
           </button>
           <button class="btn operations__tab operations__tab--3" data-tab="3">
